--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@ body{
     font-family: var(--secondary-font);
     font-weight: 700;
     font-size: 26px;
-    line-height: 30px;
+    line-height: 1.15;
 }
 
 .header span{
@@ -50,7 +50,7 @@ body{
 .header__info2{
     color:var(--gray-color);
     text-decoration: none;
-    line-height:16px;
+    line-height:1.14;
     font-size: 14px;
 }
 
@@ -59,19 +59,22 @@ body{
     color: var(--white-color);
     font-weight: 900;
     font-size: 44px;
-    line-height: 60px;
+    line-height: 1.36;
     text-align: center;
 }
 
 .solutions button{
     font-weight: 700;
     font-size: 16px;
-    line-height: 30px;
+    line-height: 1.875;
     color:var(--white-color);
     background-color:var(--aqua-color);
 }
-.solutions button:hover{
+.solutions button:hover,
+.solutions button:focus,
+.solutions button:active{
     color:var(--green-color);
+    background-color: var(--blue-color);
     cursor:pointer;
 }
 
@@ -82,20 +85,20 @@ body{
 .qualities h4{
     font-weight: 700;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     color:#212121;
 }
 .qualities p{
     color:var(--gray-color);
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.71;
 }
 
 .what_we_do h2{
     color:var(--black-color);
     font-weight: 700;
     font-size: 36px;
-    line-height:42px;
+    line-height:1.16;
     text-align: center;
 }
 
@@ -103,14 +106,14 @@ body{
     color:var(--black-color);
     font-weight: 700;
     font-size: 36px;
-    line-height: 42px;
+    line-height: 1.16;
     text-align: center;
 }
 .our_team ul{
     list-style: none;
     font-weight: 500;
     font-size: 16px;
-    line-height: 19px;
+    line-height: 1.19;
     text-align: center;
 }
 .our_team_p1{
@@ -124,7 +127,7 @@ body{
 .footer{
     background-color:var(--brightblack-color);
     font-size: 26px;
-    line-height: 31px;
+    line-height: 1.19;
     font-weight: 700;
 }
 .footer p{
@@ -140,7 +143,7 @@ body{
 .footer address{
     color:var(--white-color);
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
 }
 .footer a{
     text-decoration: none;
@@ -158,7 +161,7 @@ body{
     background-color:var(--brightgray);
     color: var(--black-color);
     text-align:center;
-    line-height: 26px;
+    line-height: 1.62;
     font-size: 16px;
 }
 
@@ -175,11 +178,11 @@ body{
 .list__section__p1{
     font-weight: 700;
     font-size: 18px;
-    line-height: 36px;
+    line-height: 2;
     color:var(--black-color);
 }
 .list__section__p2{
     font-size: 16px;
-    line-height: 30px;
+    line-height: 1.875;
     color: var(--gray-color);
 }
